<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">FlowerSKI</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">松开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string-array name="main_tabs">
        <item>首页</item>
        <!--  <item>通知</item> -->
        <item>求教</item>
        <item>约课</item>
        <item>我的</item>
        <!--  <item>资讯，其实就是 首页</item> 
        	以下标签为main页顶部标签
        -->
        <item>视频</item>
        <item>教程</item>
        <item>精华</item>
    </string-array>
    <string-array name="main_top_tabs">
        <item>资讯</item>
        <item>视频</item>
        <item>教程</item>
        <item>精华</item>
    </string-array>
    <!-- 消息通知标签 -->
    <string-array name="my_msg_tabs">
        <item>通知</item>
        <item>评论</item>
        <item>点赞</item>
    </string-array>
    <!-- 收藏标签 -->
    <string-array name="my_collect_tabs">
        <item>教练</item>
        <item>课程</item>
    </string-array>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="record_check_available_faild">手机满了！至少需要%sM存储空间才能继续拍摄！</string>
    <string name="title_name">SKI SCHOOL</string>
    <!-- 注册用户协议 -->
    <string name="register_beginning">本协议是您与“郝世花滑雪”平台（以下简称“平台”）之间就平台服务等相关事宜所订立的契约，请您仔细阅读本服务协议说明，当您点击“阅读并同意”按钮后，本协议即构成对双方有约束力的法律文件。</string>
    <string name="register_item_1">第1条 条款确认</string>
    <string name="register_item_2">第2条 本站服务</string>
    <string name="register_item_3">第3条 用户信息</string>
    <string name="register_item_4">第4条 言论规则</string>
    <string name="register_item_5">第5条 所有权及知识产权条款</string>
    <string name="register_item_6">第6条 教学及安全责任声明</string>
    <string name="register_item_1_content">1.1平台的所有权和运作权归“郝世花滑雪”所有。用户同意所有服务协议条款并完成注册程序，即可成为平台的正式会员。\n
1.2用户点击同意本协议后，即视为用户确认自己具有享受平台服务、下单购物等相应的权利能力和行为能力，能够独立承担法律责任。\n
1.3 “郝世花滑雪”保留在中华人民共和国大陆地区依法施行之法律允许的范围内独自决定拒绝服务、关闭会员账户、清除或编辑内容或取消订单的权利。</string>
    <string name="register_item_2_content">2.1“郝世花滑雪”通过互联网依法为用户提供互联网信息等服务，用户在完全同意本协议及平台规定的情况下，有权使用平台的相关服务。\n
2.2 注册成功后，即视为接受并遵守平台所有产品的服务标准和消费说明，消费前请详细阅读产品说明。\n
2.3平台将对会员履行以下义务：\n（1）对会员在平台上所储的资金安全负责；\n（2）对会员在平台上所有消费行为的兑现过程给予监督，并对过程中出现的投诉予以协调并解决；\n（3）对平台上所列出的所有商品的真实可靠性予以负责；\n（4）对会员的个人资料和信息予以保密，并承诺不以任何方式进行泄露。\n（5）以上班式消费，1对1教练等都不含税点。如需发票请自行支付。</string>
    <string name="register_item_3_content">3.1用户应自行诚信向平台提供注册资料，用户同意其提供的注册资料真实、准确、完整、合法有效，用户注册资料如有变动的，应及时更新其注册资料。\n\n
3.2用户注册成功后，将产生用户名和密码等账户信息，您可以根据平台规定改变您的密码。用户应谨慎合理的保存、使用其用户名和密码。用户若发现任何非法使用用户账号或存在安全漏洞的情况，请立即通知平台并向公安机关报案。\n\n
3.3“郝世花滑雪”不会向任何第三方披露、转让、出租或者出售用户的个人信息、涉及用户个人信息的数据以及用户保存在平台各项服务中的非公开内容。\n\n
3.4用户同意，“郝世花滑雪”拥有通过邮件、短信、电话等形式，向在平台注册、消费用户发送订单信息、促销活动等告知信息的权利。
</string>
    <string name="register_item_4_content">4.1本协议依据国家相关法律法规规章制定，用户不得在平台发表包含以下内容的言论：\n
（1）煽动抗拒、破坏宪法和法律、行政法规实施的；\n（2）煽动颠覆国家政权，推翻社会主义制度的；\n（3）煽动分裂国家、破坏国家统一的；\n（4）煽动民族仇恨、民族歧视，破坏民族团结的；\n（5）任何包含对种族、性别、宗教、地域内容等歧视的；\n（6）捏造或者歪曲事实，散布谣言，扰乱社会秩序的；\n（7）宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的；\n（8）公然侮辱他人或者捏造事实诽谤他人的，或者进行其他恶意攻击的；\n（9）损害国家机关信誉的；\n（10）其他违反宪法和法律行政法规的。\n\n
若用户未遵守以上规定的，平台有权作出独立判断并采取暂停或关闭用户帐号等措施。用户须对自己在网上的言论和行为承担法律责任。
</string>
    <string name="register_item_5_content">5.1“郝世花滑雪”拥有此平台内容及资源的著作权等合法权利，平台上的所有内容诸如文字、图像、标识、商标、声音文件片段、数据编辑和软件都是“郝世花滑雪”或其内容提供者的财产，受中国和国际版权法的保护。未经“郝世花滑雪”明确的书面许可，不得以任何目的对平台内容复制、复印、仿造、出售、转售或以其他方式加以利用。</string>
    <string name="register_item_6_content">若用户通过平台购买教学产品即证明本人自愿报名参加“郝世花滑雪”主办的滑雪培训活动，并做如下声明及约定：\n
6.1 用户本人全面理解并同意遵守“郝世花滑雪”所制定的各项规程、规则、规定、要求及采取的措施；\n\n
6.2 用户本人为完全民事行为能力人，身体健康，为参加本次活动做好了准备，本人确认无心、脑、血管系统的疾病及其他影响运动能力的疾病和伤痛，用户本人确认自身身体和精神健康状况均符合参加培训活动的各项要求。\n\n
6.3 用户本人全面理解参加户外运动必然具有一定的危险性和不可预知性，对于参加活动可能发生的各种风险和意外用户本人已作全面、谨慎的评估，且已自行准备了必要的防范措施；本人愿意承担活动期间可能发生的自身意外风险责任，非因“郝世花滑雪”原因造成的自身或他人伤害、死亡或其他任何形式的人身及财产损失，“郝世花滑雪”不需要承担任何形式的赔偿责任；\n\n
6.4 用户本人保证在培训过程中服从“郝世花滑雪”工作人员的管理和指挥；\n\n
6.5 用户本人授权活动主办方及指定媒体无偿使用培训活动过程中产生的用户本人的肖像、姓名、声音和其他个人资料用于“郝世花滑雪”的宣传和推广；\n\n</string>
	<string name="member_info_thanks">感谢您注册成为“郝世花滑雪”平台会员。平台汇聚全球雪场资源，集成优秀教练团队，旨在为滑雪爱好者提供专业、安全、贴心的滑雪教学服务。平台拥有丰富的滑雪培训课程，并能全程记录您的滑雪成长轨迹。系统预定操作简单快捷，支付方式便捷安全，是您闯荡滑雪世界的忠实伴侣和助手。\n\n感谢您注册成为“郝世花滑雪”平台会员。平台汇聚全球雪场资源，集成优秀教练团队，旨在为滑雪爱好者提供专业、安全、贴心的滑雪教学服务。</string>
</resources>
